src/test/ui/resolve/issue-3907.stderr
error[E0404]: expected trait, found type alias `Foo`
  --> $DIR/issue-3907.rs:11:6
   |
LL | impl Foo for S {
   |      ^^^ not a trait
   |
help: consider importing this trait instead
   |
LL | use issue_3907::Foo;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0404`.
